--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html>
 <title>Matijevic - Zeiza the Chatbot</title>
+<link rel="stylesheet" type="text/css" href = "/styles.css"></link>
 <main></main>
 <script src="/bundle.js"></script>
+<script src="/socket.io/socket.io.js"></script>
