--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>Matijevic - Zeiza the Chatbot</title>
 <link rel="stylesheet" type="text/css" href = "/styles.css"></link>
+<body>
 <main></main>
 <script src="/bundle.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+</body>
+</html>
