--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href = "/styles.css"></link>
 <body>
 <main></main>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="/bundle.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 </body>
